# Rust-Workshop-mar-2025

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json
axum/: Cargo.toml
axum-web-server/: .env  .gitignore  Makefile  README.md  docker-compose.yml  index.html
axum-web-server/grafana/: dashboard-provider.yml  prometheus-datasource.yml
axum-web-server/grafana/dashboards/: system_stats.json
axum-web-server/prometheus/: prometheus.yml
axum-web-server/src/: metrics.rs
axum-web-server/src/routes/: healthcheck.rs  metrics.rs  mod.rs
axum-web-server/webserver/: Cargo.toml
axum-web-server/webserver/api-docs/: postman.json  restfox.json
axum-web-server/webserver/src/: main.rs  metrics.rs
axum-web-server/webserver/src/routes/: healthcheck.rs  metrics.rs  mod.rs  prometheus_metrics.rs  realtime.rs
axum/src/: main.rs
axum/src/routes/: metrics.rs  realtime.rs
embassy/: README.md
src/: main.rs
src/routes/: healthcheck.rs  mod.rs
tauri/: README.md  package.json
tauri-app/: README.md  deno,js  index.html  package.json
tauri-app/src/: main.ts
tauri-app/src-tauri/: tauri.conf.json
tauri-app/src-tauri/src/: main.rs
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: main.rs
