[package]
name = "Rust-Workshop-mar-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
sysinfo = { version = "0.38.4", features = ["serde"] }
futures-core = "0.3.32"
tokio-stream = "0.1.18"

utoipa = { version = "5", features = ["axum_extras", "decimal"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
